[project]
name = "linear-github-mcp-server"
version = "0.1.0"
description = "MCP server for Linear + GitHub automation with CrewAI research"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.27.2",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "nest-asyncio>=1.6.0",
    "keycardai-oauth",
    "keycardai-mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.uv.sources]
keycardai-oauth = { path = "../python-sdk/packages/oauth", editable = true }
keycardai-mcp = { path = "../python-sdk/packages/mcp", editable = true }
