[project]
name = "linear-github-mcp-server"
version = "0.1.0"
description = "MCP server for Linear + GitHub automation with CrewAI research"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.27.2",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "nest-asyncio>=1.6.0",
    "keycardai-mcp-fastmcp",
    "litellm>=1.50.0",  # For drop_params configuration
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

# keycardai-mcp-fastmcp includes both keycardai-oauth and keycardai-mcp as dependencies
